fix webpack config: Aligne css rule naming of server and client config fix npm dependencies

--- a/public/styles.css
+++ b/public/styles.css
@@ -1,81 +1,1 @@
-#_2oIS7Nbjt3U80_qBApMp2T .form-group {
-  margin-bottom: 0; }
-  #_2oIS7Nbjt3U80_qBApMp2T .form-group input {
-    font-size: 16px;
-    padding: 10px;
-    box-sizing: border-box;
-    height: auto; }
-
-#_2oIS7Nbjt3U80_qBApMp2T button[type=submit] {
-  width: 100%; }
-
-#_2oIS7Nbjt3U80_qBApMp2T .info {
-  margin-top: 1em; }
-
-#_11QxgARDocmTJuBV03x61J {
-  margin-bottom: -1px;
-  border-bottom-right-radius: 0;
-  border-bottom-left-radius: 0; }
-
-#bj-HSf4ukI3dbAwMT3Rje {
-  margin-bottom: 10px;
-  border-top-left-radius: 0;
-  border-top-right-radius: 0; }
-#_2B7I8jE6XjJ4Wpigz2a7mt {
-  margin-top: 1em; }
-#_2YCL_tKfx8LI5x2KqNHmDg {
-  height: 50px;
-  width: 50px;
-  -webkit-animation: spin 1s linear infinite;
-  -moz-animation: spin 1s linear infinite;
-  animation: spin 1s linear infinite; }
-  #_2YCL_tKfx8LI5x2KqNHmDg .outer {
-    position: relative;
-    box-sizing: border-box;
-    width: 50px;
-    height: 50px;
-    background: black;
-    border-radius: 50px; }
-  #_2YCL_tKfx8LI5x2KqNHmDg .inner1 {
-    position: absolute;
-    box-sizing: border-box;
-    top: 3px;
-    left: 3px;
-    width: 44px;
-    height: 44px;
-    background: #f5f5f5;
-    border-radius: 46px; }
-  #_2YCL_tKfx8LI5x2KqNHmDg .inner2 {
-    position: absolute;
-    box-sizing: border-box;
-    width: 50px;
-    height: 50px;
-    background: #f5f5f5;
-    border-bottom-left-radius: 50px; }
-
-@-webkit-keyframes spin {
-  100% {
-    -webkit-transform: rotate(360deg); } }
-
-@-moz-keyframes spin {
-  100% {
-    -moz-transform: rotate(360deg); } }
-
-@keyframes spin {
-  100% {
-    -webkit-transform: rotate(360deg);
-    transform: rotate(360deg); } }
-._1iuwQQ-9yZYGM1PJyzjbaC {
-  width: 0;
-  margin: 0 auto;
-  padding: 1.5em; }
-body {
-  background: #f5f5f5; }
-
-.center-container {
-  max-width: 330px;
-  margin: 0 auto;
-  padding: 1.5em; }
-
-.header {
-  text-align: center; }
+#_2oIS7Nbjt3U80_qBApMp2T .form-group{margin-bottom:0}#_2oIS7Nbjt3U80_qBApMp2T .form-group input{font-size:16px;padding:10px;box-sizing:border-box;height:auto}#_2oIS7Nbjt3U80_qBApMp2T button[type=submit]{width:100%}#_2oIS7Nbjt3U80_qBApMp2T .info{margin-top:1em}#_11QxgARDocmTJuBV03x61J{margin-bottom:-1px;border-bottom-right-radius:0;border-bottom-left-radius:0}#bj-HSf4ukI3dbAwMT3Rje{margin-bottom:10px;border-top-left-radius:0;border-top-right-radius:0}#_2B7I8jE6XjJ4Wpigz2a7mt{margin-top:1em}#_2YCL_tKfx8LI5x2KqNHmDg{height:50px;width:50px;-webkit-animation:spin 1s linear infinite;-moz-animation:spin 1s linear infinite;animation:spin 1s linear infinite}#_2YCL_tKfx8LI5x2KqNHmDg .outer{position:relative;box-sizing:border-box;width:50px;height:50px;background:#000;border-radius:50px}#_2YCL_tKfx8LI5x2KqNHmDg .inner1{position:absolute;box-sizing:border-box;top:3px;left:3px;width:44px;height:44px;background:#f5f5f5;border-radius:46px}#_2YCL_tKfx8LI5x2KqNHmDg .inner2{position:absolute;box-sizing:border-box;width:50px;height:50px;background:#f5f5f5;border-bottom-left-radius:50px}@-webkit-keyframes spin{to{-webkit-transform:rotate(1turn)}}@-moz-keyframes spin{to{-moz-transform:rotate(1turn)}}@keyframes spin{to{-webkit-transform:rotate(1turn);transform:rotate(1turn)}}._1iuwQQ-9yZYGM1PJyzjbaC{width:0;margin:0 auto;padding:1.5em}body{background:#f5f5f5}.center-container{max-width:330px;margin:0 auto;padding:1.5em}.header{text-align:center}
